<?xml version="1.0" encoding="utf-8"?>

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent" >
	    
	    <ImageView android:src="@drawable/background" android:scaleType="centerCrop" android:layout_width="fill_parent" android:layout_height="fill_parent"/>

<LinearLayout
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	
	<ScrollView 
		android:layout_width="fill_parent" android:padding="5dp"
		android:layout_height="0dp" android:layout_weight="1">
	<LinearLayout 
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content" >
		
	    
		<AutoCompleteTextView 
			android:id="@+id/inputNom"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:hint="@string/nom" />

		<AutoCompleteTextView 
			android:id="@+id/inputAppellation"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:hint="@string/appellation" />
			
		<AutoCompleteTextView 
			android:id="@+id/inputPOS"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:hint="@string/point_of_sale" />
			
		<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="4" >
			<CheckBox android:id="@+id/checkbox_red"
		        android:layout_width="0dp" android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="@string/colour_red"
		        android:textSize="15dp"
		        android:checked="true" />
    		<CheckBox android:id="@+id/checkbox_white"
		        android:layout_width="0dp" android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="@string/colour_white" 
		        android:textSize="15dp"
		        android:checked="true" />
		    <CheckBox android:id="@+id/checkbox_rose"
		        android:layout_width="0dp" android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="@string/colour_rose" 
		        android:textSize="15dp"
		        android:checked="true" />
		    <CheckBox android:id="@+id/checkbox_yellow"
		        android:layout_width="0dp" android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="@string/colour_yellow" 
		        android:textSize="15dp"
		        android:checked="true" />
		</LinearLayout>

	<LinearLayout android:orientation="horizontal" android:gravity="center_vertical"  android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1" >
		<AutoCompleteTextView 
			android:id="@+id/inputMillesime" 
			android:inputType="number"
			android:layout_width="0dp" 
			android:layout_height="wrap_content" 
			android:layout_weight="0.7"
			android:hint="@string/millesime" />
			<Spinner 
        android:id="@+id/spinnerMillesime"
        android:layout_width="0dp"
        android:layout_marginLeft="5dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
    	/>
	</LinearLayout>

		<AutoCompleteTextView 
			android:id="@+id/inputCepage"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:hint="@string/cepage" />
			
		<AutoCompleteTextView 
			android:id="@+id/inputAccords"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:hint="@string/accords" />
			
	<LinearLayout android:orientation="horizontal" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" >
		<AutoCompleteTextView 
			android:id="@+id/inputPrix"
			android:inputType="numberDecimal"
			android:layout_width="0dp" 
			android:layout_height="wrap_content" 
			android:layout_weight="0.7"
			android:hint="@string/prix" />
		<Spinner 
        android:id="@+id/spinnerPrice"
        android:layout_marginLeft="5dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
    	/>
	</LinearLayout>
	
			<LinearLayout android:orientation="horizontal" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" >
		    <AutoCompleteTextView 
				android:id="@+id/inputStock"
				android:inputType="number"
				android:layout_width="0dp" 
				android:layout_height="wrap_content" 
				android:layout_weight="0.7"
				android:hint="@string/hint_stock_search" />
			<Spinner 
		        android:id="@+id/spinnerStock"
		        android:layout_width="0dp"
		        android:layout_marginLeft="5dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.3"
	    	/>

		</LinearLayout>
	
	        
	        </LinearLayout>
	        </ScrollView>
	        <Button
	    	android:id="@+id/searchButton"
	    	android:layout_marginTop="10dp"
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content" 
	        android:background="@drawable/selector_ok"
	        />
</LinearLayout>
</RelativeLayout>
