<?xml version="1.0" encoding="utf-8"?>
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent" >
	    
	    <ImageView android:src="@drawable/background" android:scaleType="centerCrop" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1" >
    
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_horizontal" android:orientation="vertical" >
    
    

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/hide_or_show"
        android:gravity="center"
	    android:background="@drawable/border"
	    android:shadowRadius="0"
	    android:textColor="@color/color_white"
        android:textSize="20dp" />

    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal"
    android:gravity="center_vertical|fill_vertical" android:id="@+id/rlpic" android:padding="5dp" android:layout_marginTop="10dp">
	    <ToggleButton
	        android:id="@+id/toggle_picture"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:textOn=""
	        android:textOff=""
	        android:background="@drawable/toggle_selector" />
    

	    <ToggleButton
	        android:id="@+id/toggle_aging"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:textOn=""
	        android:textOff=""
	        android:layout_below="@id/toggle_picture"
	        android:layout_alignParentRight="true"
	        android:background="@drawable/toggle_selector"  />
	
	    <ToggleButton
	        android:id="@+id/toggle_stock"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:textOn=""
	        android:textOff=""
	        android:layout_below="@id/toggle_aging"
	        android:layout_alignParentRight="true"
	        android:background="@drawable/toggle_selector"  />
	
	    <ToggleButton
	        android:id="@+id/toggle_price"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:textOn=""
	        android:textOff=""
	        android:layout_below="@id/toggle_stock"
	        android:layout_alignParentRight="true"
	        android:background="@drawable/toggle_selector"  />
	
	    <ToggleButton
	        android:id="@+id/toggle_variety"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:textOn=""
	        android:textOff=""
	        android:layout_below="@id/toggle_price"
	        android:layout_alignParentRight="true"
	        android:background="@drawable/toggle_selector" />
	
	    <ToggleButton
	        android:id="@+id/toggle_assessment"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:textOn=""
	        android:textOff=""
	        android:layout_below="@id/toggle_variety"
	        android:layout_alignParentRight="true"
	        android:background="@drawable/toggle_selector"  />
	
	    <ToggleButton
	        android:id="@+id/toggle_bestwith"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:textOn=""
	        android:textOff=""
	        android:layout_below="@id/toggle_assessment"
	        android:layout_alignParentRight="true"
	        android:background="@drawable/toggle_selector"  />
	    
	<TextView
	    	android:id="@+id/preftv_picture"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/hs_picture"
	        android:layout_marginLeft="20dp"
	        android:layout_alignBaseline="@id/toggle_picture"
	        android:textSize="15sp" />
	     
	<TextView
			android:id="@+id/preftv_aging"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/hs_aging"
	        android:layout_marginLeft="20dp"
	        android:layout_alignBaseline="@id/toggle_aging"
	        android:textSize="15sp" />
	     	     
	<TextView
	    	android:id="@+id/preftv_stock"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:text="@string/hs_stock"
	        android:layout_alignBaseline="@id/toggle_stock"
	        android:textSize="15sp" />
	     	     	     
	<TextView
	    	android:id="@+id/preftv_assessment"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:text="@string/hs_assessments"
	        android:layout_alignBaseline="@id/toggle_assessment"
	        android:textSize="15sp" />
	     	     	     	     
	<TextView
	    	android:id="@+id/preftv_bestwith"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:text="@string/hs_best_with"
	        android:layout_alignBaseline="@id/toggle_bestwith"
	        android:textSize="15sp" />
	     	     	     	     	     
	<TextView
	    android:id="@+id/preftv_price"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:text="@string/hs_price"
	        android:layout_alignBaseline="@id/toggle_price"
	        android:textSize="15sp" />
	     	     	     	     	     	     
	<TextView
	    android:id="@+id/preftv_variety"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:text="@string/hs_variety"
	        android:layout_alignBaseline="@id/toggle_variety"
	        android:textSize="15sp" />
    </RelativeLayout>
    
    
    </LinearLayout>

</ScrollView>
</RelativeLayout>